# dynasm-rs

./: README.md
lib/: Cargo.toml  README.md
lib/src/: common.rs  directive.rs  lib.rs  serialize.rs
lib/src/arch/: mod.rs
lib/src/arch/x64/: ast.rs  compiler.rs  mod.rs  parser.rs
