[package]
name = "dynasm-lib"
version = "0.1.0-alpha"
authors = ["Alexander Stocko <as@coder.gg>", "CensoredUsername <cens.username@gmail.com>", "HeroicKatora <andreas.molzer@gmx.de>"]

description = "A pure rust assembler. Used within direct-asm for maximum control over assembly."

documentation = "https://censoredusername.github.io/dynasm-rs/plugin/dynasm/index.html"
repository = "https://github.com/CensoredUsername/dynasm-rs"

readme = "../README.md"
keywords = ["jit", "dynasm", "dynasmrt", "dynasm-rs", "assembler"]
license = "MPL-2.0"
edition = "2018"

[lib]
name = "dynasm"

[dependencies]
lazy_static = "^1.4"
bitflags = "^1.1"
byteorder = "^1.3"
