[package]
name = "dynasm-lib"
version = "0.1.0-alpha"
authors = ["HeroicKatora <andreas.molzer@gmx.de>", "Alexander Stocko <as@coder.gg>", "CensoredUsername <cens.username@gmail.com>"]

description = "A pure rust assembler, not a JIT. Used within direct-asm for maximum control over assembly."
documentation = "https://github.com/HeroicKatora/dynasm-rs"
repository = "https://github.com/HeroicKatora/dynasm-rs"

readme = "../README.md"
keywords = ["jit", "dynasm", "dynasm-rs", "directasm", "assembler"]
license = "MPL-2.0"
edition = "2018"

[lib]
name = "dynasm"

[dependencies]
lazy_static = "^1.4"
bitflags = "^1.1"
byteorder = "^1.3"
